--- a/src/main/resources/templates/plans/plans.html
+++ b/src/main/resources/templates/plans/plans.html
@@ -37,6 +37,8 @@
                 <div class="plan-member-name" th:text="${plan.member.name}" style="display: inline-block;"></div>
                 <!-- Edit icon -->
                 <span class="edit-icon" th:onclick="'editPlan(event, \'' + ${plan.id} + '\')'">&#9998;</span>
+                <!-- Delete icon -->
+                <span class="delete-icon" th:onclick="'deletePlan(event, \'' + ${plan.id} + '\')'">&#10006;</span>
                 <!-- Edit form -->
                 <div class="editForm" th:id="'editForm_' + ${plan.id}">
                     <form th:id="'editPlanForm_' + ${plan.id}">
@@ -225,6 +227,28 @@
             .catch(error => {
                 console.error('Error:', error);
             });
+    }
+
+    // form 삭제
+    function deletePlan(event, id) {
+        event.preventDefault();
+        var confirmation = confirm("Are you sure you want to delete this plan?");
+        if (confirmation) {
+            fetch('/plans/delete/' + id, {
+                method: 'DELETE',
+            })
+                .then(response => {
+                    if (response.redirected) {
+                        console.log('Plan deleted successfully.');
+                        window.location.href = response.url;
+                    } else {
+                        console.error('Error deleting plan:', response.status);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error deleting plan:', error);
+                });
+        }
     }
 </script>
 </body>
