--- a/src/main/resources/templates/plans/plans.html
+++ b/src/main/resources/templates/plans/plans.html
@@ -60,18 +60,8 @@
     </div>
 </div>
 <div class="container">
-    <form id="planForm">
-        <div class="form-group">
-            <label for="content">content</label>
-            <input type="text" id="content" name="content" placeholder="내용 입력하세요">
-        </div>
-        <div class="form-group">
-            <label for="type">타입</label>
-            <input type="text" id="type" name="type" placeholder="타입을 입력하세요">
-        </div>
-        <button type="submit" onclick="submitPlan(event)">등록</button>
-    </form>
-</div> <!-- /container -->
+    <button onclick="newPlan()">새로운 계획 추가</button>
+</div>
 <script>
     // edit form 표출
     function editPlan(event, id) {
@@ -196,39 +186,6 @@
         });
     });
 
-    // 새로운 form 제출
-    function submitPlan(event) {
-        event.preventDefault();
-
-        var content = document.getElementById('content').value;
-        var type = document.getElementById('type').value;
-
-        var formData = {
-            content: content,
-            type: type
-        };
-
-        fetch('/plans/new', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(formData)
-        })
-            .then(response => {
-                // 응답 처리
-                if (response.redirected) {
-                    window.location.href = response.url; // 리다이렉트 수행
-                } else {
-                    // 리다이렉트가 아닌 경우에 대한 처리
-                    console.log(response);
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-    }
-
     // form 삭제
     function deletePlan(event, id) {
         event.preventDefault();
@@ -249,6 +206,23 @@
                     console.error('Error deleting plan:', error);
                 });
         }
+    }
+
+    // newPlan 페이지로 이동
+    function newPlan() {
+        fetch('/newPlan', {
+            method: 'GET'
+        })
+            .then(response => {
+                if (response) {
+                    window.location.href = response.url; // 리다이렉트 수행
+                } else {
+                    console.error('Error creating new plan:', response.status);
+                }
+            })
+            .catch(error => {
+                console.error('Error creating new plan:', error);
+            });
     }
 </script>
 </body>
